[package]
name = "aoc19"
version = "0.1.0"
authors = ["Sean Kermes <skermes@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.2"
itertools = "0.8"
thiserror = "1.0"

[dev-dependencies]
criterion = "0.2"
pretty_assertions = "0.6.1"

[[bench]]
name = "intcode_benchmark"
harness = false
